--- a/app/templates/shop/includes/product_list_square_style.html
+++ b/app/templates/shop/includes/product_list_square_style.html
@@ -13,34 +13,38 @@
             </div>
         </div>
         <div class="container">
-            <div class="row tac">
-                {% for product_inline in list.products.all %}
-                  {% with product_inline.product as product %}
-                    {% with product.links.all|get_type_link:"link" as links %}
-                      {% with product.prestashop_products.all as prestashop_products %}
-                        <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
-                            <div class="product-box" >
-                                {% if product.images.all %}
-                                    <a href="{{ links.0 }}" target="_blank" title="{{ product.title }}">
-                                        <figure class="product-box__image">
-                                            <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail product.images.all.0 640 200 top=0.5 %}" alt="product"/>
-                                        </figure>
-                                    </a>
-                                {% endif %}
-                                <div class="product-box__content tal">
-                                    <a href="{{ links.0 }}" target="_blank" title="{{ product.title }}"><h3 class="product-box__title">{{ product.title }}</h3></a>
-                                    {% if product.description %}
-                                        <div class="product-box__desc">{{ product.description|richtext_filters|safe|truncatechars_html:100 }}</div>
-                                    {% elif product.content %}
-                                        <div class="product-box__desc">{{ product.content|richtext_filters|safe|truncatechars_html:100 }}</div>
-                                    {% endif %}
+            <div class="row">
+                <div class="col-sm-9 col-sm-push-3 col-lg-10 col-lg-push-2">
+                    <div class="row tac">
+                        {% for product_inline in list.products.all %}
+                          {% with product_inline.product as product %}
+                            {% with product.links.all|get_type_link:"link" as links %}
+                              {% with product.prestashop_products.all as prestashop_products %}
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
+                                    <div class="product-box" >
+                                        {% if product.images.all %}
+                                            <a href="{{ links.0 }}" target="_blank" title="{{ product.title }}">
+                                                <figure class="product-box__image">
+                                                    <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail product.images.all.0 640 200 top=0.5 %}" alt="product"/>
+                                                </figure>
+                                            </a>
+                                        {% endif %}
+                                        <div class="product-box__content tal">
+                                            <a href="{{ links.0 }}" target="_blank" title="{{ product.title }}"><h3 class="product-box__title">{{ product.title }}</h3></a>
+                                            {% if product.description %}
+                                                <div class="product-box__desc">{{ product.description|richtext_filters|safe|truncatechars_html:100 }}</div>
+                                            {% elif product.content %}
+                                                <div class="product-box__desc">{{ product.content|richtext_filters|safe|truncatechars_html:100 }}</div>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                      {% endwith %}
-                    {% endwith %}
-                  {% endwith %}
-                {% endfor %}
+                              {% endwith %}
+                            {% endwith %}
+                          {% endwith %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
