--- a/templates/pages/menus/current_tree_primary.html
+++ b/templates/pages/menus/current_tree_primary.html
@@ -30,6 +30,9 @@
                     <ul class="nav-tree nav-tree--level-{{ branch_level }}">
                         {% page_menu page %}
                     </ul>
+                    <ul class="nav-tree" data-summary>
+                        {% include "pages/menus/current_tree_summary.html" %}
+                    </ul>
                 {% endif %}
                 {% if page.is_current_or_ascendant and not page.has_children_in_menu %}
                     <ul class="nav-tree" data-summary>
