--- a/app/templates/core/inc/block.html
+++ b/app/templates/core/inc/block.html
@@ -12,7 +12,9 @@
                         <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
                             <h2 class="dotted">{{ block.title }}</h2>
                                 {% if block.description %}
-                            <p>{{ block.description }}</p>
+                            <div class="chapo">
+                                {{ block.description }}
+                            </div>
                             {% endif %}
                             {% if block.content %}
                                  {{ block.content|richtext_filters|safe }}
