--- a/templates/pages/departmentpage.html
+++ b/templates/pages/departmentpage.html
@@ -69,22 +69,24 @@
 {% block page_related_content %}
     {% if page.departmentpage.department.articles.all %}
         <div class="white-bg pb2">
-            <div class="container">
-                <div class="row tac">
-                    <div class="col-xs-12">
-                        <h2 class="dashed dashed--center">{% trans "Also discover" %}</h2>
-                    </div>
-                </div>
-                <div class="row tac">
-                    {% for article in page.departmentpage.department.articles.all %}
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
-                            {% include 'magazine/article/includes/article_card.html' %}
+            <div class="page__block">
+                <hr />
+                <div class="container">
+                    <div class="row tac">
+                        <div class="col-xs-12">
+                            <h2 class="dashed dashed--center">{% trans "Also discover" %}</h2>
                         </div>
-                    {% endfor %}
+                    </div>
+                    <div class="row tac">
+                        {% for article in page.departmentpage.department.articles.all %}
+                            <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
+                                {% include 'magazine/article/includes/article_card.html' %}
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
-
     {% endif %}
 
 {% endblock %}
@@ -92,8 +94,8 @@
 {% block logo %}
     {% with page.departmentpage.images.all|get_type:'logo' as images %}
         {% if images %}
-            <div class="page__block{% if block.background_color %} page__block--{{ block.background_color }}{% endif %}">
-                <div class="white-bg pb2">
+            <div class="white-bg">
+                <div class="page__block{% if block.background_color %} page__block--{{ block.background_color }}{% endif %}">
                     <div class="container">
                         <div class="row" data-summary-content>
                             <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
