--- a/templates/agenda/includes/event_search.html
+++ b/templates/agenda/includes/event_search.html
@@ -10,7 +10,34 @@
 {% block subtitle %}
     <div class="search-box__subtitle">
         {% include 'agenda/includes/event_date_line.html' %}
+        {% if event.prices.all.0|floatformat != '0' and event.prices.all|length > 0 and not is_archive %}
+            <a class="button button--small ml1" href="{% url 'event_booking' event.slug %}" class="event__meta__btn">
+                {% trans "Reserve" %}
+            </a>
+        {% endif %}
     </div>
+{% endblock %}
+
+{% block image %}
+    {% with event.images.all|get_type:'card' as images %}
+        {% if images %}
+        <a href="{{ event.get_absolute_url }}" class="search-box__image-wrapper">
+            <figure class="search-box__image">
+                <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail images.0.file 720 435 %}">
+            </figure>
+        </a>
+        {% else %}
+            {% with event.parent.images.all|get_type:'card' as images %}
+                {% if images %}
+                <a href="{{ event.get_absolute_url }}" class="search-box__image-wrapper">
+                    <figure class="search-box__image">
+                        <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail images.0.file 720 435 %}">
+                    </figure>
+                </a>
+                {% endif %}
+            {% endwith %}
+        {% endif %}
+    {% endwith %}
 {% endblock %}
 
 {% block tags %}
