--- a/templates/pages/teampage.html
+++ b/templates/pages/teampage.html
@@ -126,17 +126,17 @@
 {% endblock %}
 
 {% block products %}
-{% if page.teampage.product_lists.all %}
-    <h4>{% trans "Products" %}</h4>
-    {% for page_product_list in page.teampage.product_lists.all %}
-      {% with page_product_list.list as list %}
-        {% with "shop/includes/product_list_"|add:list.style|add:"_style.html" as template %}
-          {% include template %}
-        {% endwith %}
-      {% endwith %}
-    {% endfor %}
-{% endif %}
+    {% if page.teampage.product_lists.all|length > 0 %}
+        {% for page_product_list in page.teampage.product_lists.all %}
+          {% with page_product_list.list as list %}
+            {% with "shop/includes/product_list_"|add:list.style|add:"_style.html" as template %}
+              {% include template %}
+            {% endwith %}
+          {% endwith %}
+        {% endfor %}
+    {% endif %}
 {% endblock %}
+
 
 {% block logo %}
     {% with page.teampage.images.all|get_type:'logo' as images %}
