--- a/app/templates/includes/footer_scripts.html
+++ b/app/templates/includes/footer_scripts.html
@@ -12,6 +12,7 @@
     <script src="{% static "vendors/videojs-playlist/dist/videojs-playlist.js" %}"></script>
     <script src="{% static "vendors/audiojs/audiojs/audio.js" %}"></script>
     <script src="{% static "vendors/jquery_lazyload/jquery.lazyload.js" %}"></script>
+    <script src="{% static "vendors/waypoints/lib/jquery.waypoints.js" %}"></script>
     <script src="{% static "js/index.min.js" %}"></script>
 {% block extra_js %}{% endblock %}
 {% editable_loader %}
