--- a/templates/shop/includes/product_list_square_style.html
+++ b/templates/shop/includes/product_list_square_style.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-9 col-sm-push-3 col-lg-10 col-lg-push-2">
-                    <div class="row tac">
+                    <div class="row">
                         {% for product_inline in list.products.all %}
                           {% with product_inline.product as product %}
                             {% with product.links.all|get_type_link:"link" as links %}
